# sky.pro-2-bank_system

./: README.md  main.py  pyproject.toml  requirements.txt
src/: masks.py  processing.py  widget.py
